Fix for small mobile screens, if statement on length, default find and return by date caught, and increased timeout init, removed tooltips from buttons. Broke on mobile. Fixed image path for logo

--- a/client/stylesheets/main.styl
+++ b/client/stylesheets/main.styl
@@ -248,6 +248,8 @@ main
     text-align: center
     text-transform: uppercase
     font-size: .9em
+    +for_breakpoint(mobile)
+      display: none
 
     a, a:visited
       color: #777
@@ -278,7 +280,7 @@ main
     .details
       font-size: 1em
       +for_breakpoint(mobile)
-        font-size: .9em
+        font-size: .8em
 
     +for_breakpoint(mobile)
       padding: 5px
